--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,36 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.bg-dark {
+	background: #171717;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.bg-dark-primary {
+	background: #121212;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.color-dark {
+	color: #171717;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.w-default {
+	width: 1200px;
+}
+
+.swiper {
+	width: 100%;
+	height: 100%;
+	padding: 10px 0 !important;
+}
+
+.swiper-slide {
+	width: 150px !important;
+	height: 100%;
+}
+
+@media (min-width: 500px) {
+	.swiper-slide {
+		width: 205px !important;
+		height: 100%;
+	}
 }
